# RTK-Visual-Inertial-Navigation

./: README.md
ceres-solver-modified/: CMakeLists.txt  build.sh
ceres-solver-modified/cmake/: FindSuiteSparse.cmake
ceres-solver-modified/include/ceres/: ordered_groups.h  problem.h
evaluate/: evaluate.py
rtk_visual_inertial_src/camera_models/: CMakeLists.txt
rtk_visual_inertial_src/camera_models/include/camodocal/calib/: CameraCalibration.h
rtk_visual_inertial_src/camera_models/include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
rtk_visual_inertial_src/camera_models/src/: intrinsic_calib.cc
rtk_visual_inertial_src/camera_models/src/calib/: CameraCalibration.cc
rtk_visual_inertial_src/camera_models/src/camera_models/: Camera.cc  CataCamera.cc  EquidistantCamera.cc
rtk_visual_inertial_src/camera_models/src/chessboard/: Chessboard.cc
rtk_visual_inertial_src/rtk_visual_inertial/: CMakeLists.txt  package.xml
rtk_visual_inertial_src/rtk_visual_inertial/config/: rtk_visual_inertial_rviz_config.rviz
rtk_visual_inertial_src/rtk_visual_inertial/launch/: rtk_visual_inertial_rviz.launch
rtk_visual_inertial_src/rtk_visual_inertial/src/: main3.cpp
rtk_visual_inertial_src/rtk_visual_inertial/src/factor/: gnss_factor.cpp  gnss_factor.h  gnss_imu_factor.cpp  gnss_imu_factor.h  imu_factor.cpp  imu_factor.h  initial_factor.cpp  initial_factor.h  integration_base.cpp  integration_base.h  mag_factor.cpp  mag_factor.h  marginalization_factor.cpp  marginalization_factor.h  pose0_factor.cpp  pose0_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h
rtk_visual_inertial_src/rtk_visual_inertial/src/feature/: feature_manager.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h
rtk_visual_inertial_src/rtk_visual_inertial/src/gnss/include/: common_function.h  lambda.h
rtk_visual_inertial_src/rtk_visual_inertial/src/gnss/src/: common_function.cpp  lambda.cpp
rtk_visual_inertial_src/rtk_visual_inertial/src/parameter/: parameters.cpp  parameters.h
rtk_visual_inertial_src/rtk_visual_inertial/src/swf/: swf.cpp  swf.h  swf_core.cpp  swf_gnss.cpp  swf_image.cpp  swf_imu.cpp  swf_lambda.cpp
rtk_visual_inertial_src/rtk_visual_inertial/src/utility/: camera_pose_visualization.cpp  camera_pose_visualization.h  tic_toc.h  utility.h  visualization.cpp  visualization.h
yaml/: cam0_pinhole.yaml  cam1_pinhole.yaml  rtd_visual_inertial_config.yaml  rtk_visual_inertial_config.yaml  spp_CP_visual_inertial_config.yaml  spp_carrier_phase_visual_inertial_config.yaml  spp_visual_inertial_config.yaml  visual_inertial_config.yaml
(+8 files in other folders)
