<?xml version="1.0"?>
<package>
  <name>rtk_visual_inertial</name>
  <version>0.0.0</version>
  <description>The rtk_visual_inertial package</description>
  <maintainer email="xiaohonghuang@mail.scut.edu.cn">xiaohonghuang</maintainer>


  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <export>

  </export>
</package>
